--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
+  "Главная": "Main",
+  "О сайте": "About",
   "Тестовый перевод": "Test example",
-  "Язык": "Language",
-  "Главная": "Main"
+  "Язык": "Language"
 }
