--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,6 @@
 {
+  "Главная": "Главная",
+  "О сайте": "О сайте",
   "Тестовый перевод": "Тестовый перевод",
-  "Язык": "Язык",
-  "Главная": "Главная"
+  "Язык": "Язык"
 }
