--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,6 +1,7 @@
 {
   "Главная": "Главная",
   "О сайте": "О сайте",
+  "Страница не найдена": "Страница не найдена",
   "Тестовый перевод": "Тестовый перевод",
   "Язык": "Язык"
 }
