--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,7 @@
 {
   "Главная": "Main",
   "О сайте": "About",
+  "Страница не найдена": "Страница не найдена",
   "Тестовый перевод": "Test example",
   "Язык": "Language"
 }
