--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,7 +1,17 @@
 {
+  "Try": "Try to",
+  "page": "the page",
+  "reload": "reload",
+  "smthWentWrong": "Something went wrong",
   "Главная": "Main",
+  "Иначе- будет все плохо-плохо": "asdf",
   "О сайте": "About",
+  "О странице": "О странице",
+  "Попробуйте": "Попробуйте",
   "Страница не найдена": "Страница не найдена",
   "Тестовый перевод": "Test example",
-  "Язык": "Language"
+  "Что-то пошло не так": "Что-то пошло не так",
+  "Язык": "Language",
+  "перезагрузить": "перезагрузить",
+  "страницу": "страницу"
 }
