--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,7 +1,17 @@
 {
+  "Try": "Попробуйте",
+  "page": "страницу",
+  "reload": "перезагрузить",
+  "smthWentWrong": "Что-то пошло не так",
   "Главная": "Главная",
+  "Иначе- будет все плохо-плохо": "Иначе- будет все плохо-плохо",
   "О сайте": "О сайте",
+  "О странице": "О странице",
+  "Попробуйте": "Попробуйте",
   "Страница не найдена": "Страница не найдена",
   "Тестовый перевод": "Тестовый перевод",
-  "Язык": "Язык"
+  "Что-то пошло не так": "Что-то пошло не так",
+  "Язык": "Язык",
+  "перезагрузить": "перезагрузить",
+  "страницу": "страницу"
 }
