--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,10 +2,11 @@
   "Try": "Try to",
   "page": "the page",
   "reload": "reload",
+  "selected_lang": "English",
   "smthWentWrong": "Something went wrong",
-  "Главная": "Main",
+  "Главная": "Main page",
   "Иначе- будет все плохо-плохо": "asdf",
-  "О сайте": "About",
+  "О сайте": "About us",
   "О странице": "О странице",
   "Попробуйте": "Попробуйте",
   "Страница не найдена": "Страница не найдена",
