--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,8 +2,9 @@
   "Try": "Попробуйте",
   "page": "страницу",
   "reload": "перезагрузить",
+  "selected_lang": "Русский",
   "smthWentWrong": "Что-то пошло не так",
-  "Главная": "Главная",
+  "Главная": "Главная страница",
   "Иначе- будет все плохо-плохо": "Иначе- будет все плохо-плохо",
   "О сайте": "О сайте",
   "О странице": "О странице",
