--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
   "Try": "Try to",
-  "login": "login",
+  "login": "Login",
   "page": "the page",
   "reload": "reload",
   "selected_lang": "English",
