--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,6 +1,6 @@
 {
   "Try": "Попробуйте",
-  "login": "login",
+  "login": "Войти",
   "page": "страницу",
   "reload": "перезагрузить",
   "selected_lang": "Русский",
