--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,8 @@
 {
+  "My great app": "My great app",
   "Try": "Try to",
   "login": "Login",
+  "logout": "Logout",
   "page": "the page",
   "reload": "reload",
   "selected_lang": "English",
