--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,6 +1,8 @@
 {
+  "My great app": "My great app",
   "Try": "Попробуйте",
   "login": "Войти",
+  "logout": "Выйти",
   "page": "страницу",
   "reload": "перезагрузить",
   "selected_lang": "Русский",
