--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,6 +4,7 @@
   "login": "Login",
   "logout": "Logout",
   "page": "the page",
+  "profile_sidebar_item": "Profile",
   "reload": "reload",
   "selected_lang": "English",
   "smthWentWrong": "Something went wrong",
