--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,6 +4,7 @@
   "login": "Войти",
   "logout": "Выйти",
   "page": "страницу",
+  "profile_sidebar_item": "Профиль",
   "reload": "перезагрузить",
   "selected_lang": "Русский",
   "smthWentWrong": "Что-то пошло не так",
