--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,13 +1,26 @@
 {
   "My great app": "My great app",
   "Try": "Try to",
+  "age": "age",
+  "avatar": "avatar",
+  "cancel_profile_btn": "Cancel",
+  "city": "city",
+  "edit_profile_btn": "Edit profile",
+  "firstname": "firstname",
+  "lastname": "lastname",
   "login": "Login",
   "logout": "Logout",
+  "name": "name",
   "page": "the page",
   "profile_sidebar_item": "Profile",
+  "profile_title": "Profile",
   "reload": "reload",
+  "save_profile_btn": "Save",
+  "select_country_label": "select_country_label",
+  "select_currency_label": "select_currency_label",
   "selected_lang": "English",
   "smthWentWrong": "Something went wrong",
+  "username": "username",
   "Главная": "Main page",
   "Иначе- будет все плохо-плохо": "asdf",
   "О сайте": "About us",
