--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,13 +1,26 @@
 {
   "My great app": "My great app",
   "Try": "Попробуйте",
+  "age": "age",
+  "avatar": "avatar",
+  "cancel_profile_btn": "Отменить",
+  "city": "city",
+  "edit_profile_btn": "Редактировать профиль",
+  "firstname": "firstname",
+  "lastname": "lastname",
   "login": "Войти",
   "logout": "Выйти",
+  "name": "name",
   "page": "страницу",
   "profile_sidebar_item": "Профиль",
+  "profile_title": "Профиль",
   "reload": "перезагрузить",
+  "save_profile_btn": "Сохранить",
+  "select_country_label": "select_country_label",
+  "select_currency_label": "select_currency_label",
   "selected_lang": "Русский",
   "smthWentWrong": "Что-то пошло не так",
+  "username": "username",
   "Главная": "Главная страница",
   "Иначе- будет все плохо-плохо": "Иначе- будет все плохо-плохо",
   "О сайте": "О сайте",
